--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^8.3.2",
+		"mongodb": "^3.6.6",
+		"mongoose": "^5.12.5",
+		"xmlhttprequest": "^1.8.0"
 	},
 	"repository": {
 		"type": "git",
